--- a/.github/ISSUE_TEMPLATE/improve-existing-content.yml
+++ b/.github/ISSUE_TEMPLATE/improve-existing-content.yml
@@ -1,11 +1,13 @@
 name: Improve existing content
 description: Make a suggestion to improve the content in an existing programme.
-labels: ["📝 content", "🛠 goal: fix"]
+labels: ["programme", "enhancement"]
 body:
   - type: markdown
     attributes:
       value: |
-        **Hubbers!!** This is an open source repo.
+        **Hey Geek !!!** 
+
+        This is an open source repository.
 
         * For questions, ask in [Discussions](https://github.com/codinasion/codinasion-dsa/discussions).
         * Before you file an issue read the [Contributing guide](https://github.com/codinasion/codinasion-dsa/blob/master/CONTRIBUTING.md).
